test_saliency/slurm-111163.out
Running SLURM prolog script on pink55
===============================================================================
Job started on Sun Jul 15 02:58:01 BST 2018
Job ID          : 111163
Job name        : saliency
WorkDir         : /mainfs/lyceum/grm1g17/lasagne4bio/test_saliency
Partition       : lyceum
Num hosts       : 1
Num cores       : 14
Num of tasks    : 14
Hosts allocated : pink55
Job Output Follows ...
===============================================================================
  File "saliency_testing.py", line 53
    print "X.shape", X.shape
                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("X.shape", X.shape)?
==============================================================================
Running epilogue script on pink55.

Submit time  : 2018-07-15T02:58:01
Start time   : 2018-07-15T02:58:01
End time     : 2018-07-15T02:58:03
Elapsed time : 00:00:02 (Timelimit=04:00:00)

Job ID: 111163
Cluster: i5
User/Group: grm1g17/fp
State: FAILED (exit code 1)
Nodes: 1
Cores per node: 14
CPU Utilized: 00:00:00
**** Please note that the CPU efficency of your job is less than 50% ****
**** Ask the HPC team for advice -- if you need it
**** CPU Efficiency: 0.00% of 00:00:28 core-walltime

Memory Utilized: 1.26 MB

